--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "require-dev": {
         "brain/monkey": "~1.3.0",
         "mockery/mockery": "~1.0.0",
-        "phpunit/phpunit": "~5.3.0"
+        "phpunit/phpunit": "~5.3.0",
+        "satooshi/php-coveralls": "~1.0.0"
     },
     "autoload": {
         "psr-4": {
