Fixes typos in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "assely/framework",
     "type": "wordpress-plugin",
-    "description": "Assely is a PHP framework which brings a little joy to the WordPress development. Develop structured, easily scalable and complex WordPress websites and web applications with truly pleasure.",
+    "description": "Assely is a PHP framework which brings a little joy to the WordPress development. Develop structured, easily scalable and complex WordPress websites and web applications with true pleasure.",
     "keywords": ["framework", "assely", "wordpress", "php"],
     "license": "MIT",
     "homepage": "http://assely.org",
